fixed wrong positioning of li items in nav/2

--- a/css/style.css
+++ b/css/style.css
@@ -171,10 +171,9 @@ p, li {
       @media only screen and (min-width: 769px) {
         .main-header .header__nav .nav__list {
 	  display: flex!important;
-          padding-left: 1%;
-          padding-right: 1%;
+          padding: 0;
           width: 610px; }
-	  .nav__lang {
+	.nav__lang {
           width: 15%; } }
       @media only screen and (max-width: 768px) {
         .main-header .header__nav .nav__list {
